Fix z-index problem for the menu

--- a/frontend/theme/extras/header.less
+++ b/frontend/theme/extras/header.less
@@ -25,6 +25,7 @@ body.cms-ui:not(.section-search){
 
 .portal-top {
   position: relative;
+  z-index: 3;
 
   .header-wrapper {
     position: absolute;
